# Agent0

./: .gitignore  README.md
Agent0/executor_train/: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml
Agent0/executor_train/assets/docs/: DAPO.md  agent_config.md  asyncRL.md  contribution.md  evaluation.md  install.md  math_results.md  sync_design.md  tool_server.md  training_guide.md  udpate_verl_version.md
Agent0/executor_train/benchmarks/: README.md
Agent0/executor_train/eval_service/: README.md  app.py  config.py  model_service.py
Agent0/executor_train/eval_service/scripts/: start_api_service.sh
Agent0/executor_train/eval_service/test/: README.md  test_api.py  test_api_mp.py
Agent0/executor_train/examples/data_preprocess/: README.md  acecoder.py  acecoder_custom.py  deepcoder.py  deepmath.py  deepsearch.py  math_torl.py  math_torl_fix.py  mathcoder.py  nl2sql.sh  search_r1.py  taco.py  wikiQA.py
Agent0/executor_train/examples/data_preprocess/pixel_reasoner/: infovqa.py  mvbench.py  prepare_train.py  (+2 more)
Agent0/executor_train/examples/train/: README.md
Agent0/executor_train/scripts/: train_commands.sh  visualize_entropy.py
Agent0/executor_train/verl_tool/: README.md
Agent0/executor_train/verl_tool/llm_agent/: __init__.py  config.py  manager.py  tensor_helper.py  utils.py  vision_process.py  vision_utils.py
Agent0/executor_train/verl_tool/servers/: README.md  ray_utils.py  serve.py  utils.py
Agent0/executor_train/verl_tool/trainer/: main_ppo.py  runtime_env.yaml
Agent0/executor_train/verl_tool/workers/: fsdp_workers.py  utils.py
(+104 files in other folders)
